--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -4,7 +4,7 @@ options:
   verbose: true
 
 syncs:
-    ball-in-court-sync: 
+    le-vin-coupe-sync: 
         src: './src'
         # sync_strategy: 'native_osx' # not needed, this is the default now
         sync_excludes: ['ignored_folder', '.ignored_dot_folder']
