--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   app:
     build: .
-    ports: ['4000:80']
+    ports: ['4000:80', '5000:6379']
     volumes: 
          - le-vin-coupe-sync:/app/src:nocopy # set nocopy
 
