--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,5 @@ version: "3"
 services:
   app:
     build: .
-    ports: ['4000:80']
+    ports: ['4000:80', '5000:6379']
     volumes: ['./src:/app/src']
